Update gitignore for solidity contracts projects
Exclude mainnet deployment artifacts from gitignore as we need to store
them in the repository after migration.

Add .openzeppelin ignore for both projects for consistency.

--- a/solidity/random-beacon/.gitignore
+++ b/solidity/random-beacon/.gitignore
@@ -7,5 +7,8 @@ export.json
 
 # Contract artifacts
 artifacts/
-deployments/
+deployments/*
 !deployments/mainnet
+
+# OpenZeppelin
+.openzeppelin/unknown-*.json
