--- a/solidity/ecdsa/package.json
+++ b/solidity/ecdsa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keep-network/ecdsa",
-  "version": "2.0.0-dev",
+  "version": "2.0.0",
   "description": "Keep ECDSA Wallet",
   "license": "MIT",
   "files": [
@@ -69,11 +69,11 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@keep-network/random-beacon": "development",
-    "@keep-network/sortition-pools": "^2.0.0-pre.16",
+    "@keep-network/random-beacon": "2.0.0",
+    "@keep-network/sortition-pools": "2.0.0",
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
-    "@threshold-network/solidity-contracts": "development"
+    "@threshold-network/solidity-contracts": "1.2.1"
   },
   "engines": {
     "node": ">= 14.0.0"
