Fix command for upgrade of forked @keep-network-sortition-pools
In the `Use Sortition Pool forked contracts` step we wanted to upgrade the
sortition-pool contracts to verioned stored on `test-fork` branch. Previously
used command did not work correctly. Now it should do what we want.

--- a/.github/workflows/contracts-ecdsa.yml
+++ b/.github/workflows/contracts-ecdsa.yml
@@ -226,7 +226,7 @@ jobs:
       # test environment it should be used temporarily only.
       - name: Use Sortition Pool forked contracts
         run: |
-          yarn upgrade github:keep-network/sortition-pools#test-fork
+          yarn upgrade @keep-network/sortition-pools@github:keep-network/sortition-pools#test-fork
 
       - name: Configure tenderly
         env:
