Tweak testnet clients Kubernetes manifests
Here we tweak the k8s manifests of the private testnet clients. Basically, this
change is about:
- Setting `tbtc.keyGenerationConcurrency` to `2` in order to limit CPU
  competition between clients running on the same VM which often result
  with starving other processes
- Setting resource requests that reflects the actual resource consumption.
  Worth noting that the ultimate value of `resources.request.cpu` should be
  `2000m` but given the current cluster specification we can set `1500m` at
  most. Otherwise, we'll end up with unschedulable pods.

--- a/infrastructure/kube/keep-test/keep-client/gen/template.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/template.yaml
@@ -54,6 +54,10 @@ spec:
         - name: keep-client
           image: "gcr.io/keep-test-f3e0/keep-client:latest"
           imagePullPolicy: Always
+          resources:
+            requests:
+              cpu: 1500m
+              memory: 512M
           ports:
             - name: network
               containerPort: 3919
@@ -100,6 +104,8 @@ spec:
             #@ end
             - "--clientInfo.port"
             - "9601"
+            - "--tbtc.keyGenerationConcurrency"
+            - "2"
       initContainers:
         #@ for/end initcontainer in data.values.initContainers:
         - name: #@ initcontainer.name
