Increase prometheus data retention
By default Prometheus stores data from the last 15 days. We need to
increase that to 1 year.

See https://prometheus.io/docs/prometheus/latest/storage/

--- a/infrastructure/kube/keep-test/monitoring/prometheus-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus-deployment.yaml
@@ -25,6 +25,7 @@ spec:
           args:
             - --config.file=/etc/prometheus/prometheus.yml
             - --storage.tsdb.path=/prometheus/
+            - --storage.tsdb.retention.time=1y
           ports:
             - name: prometheus
               containerPort: 9090
