--- a/infrastructure/kube/keep-test/monitoring/grafana/grafana-pvc.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/grafana-pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
+  namespace: monitoring
   labels:
     app: grafana
 spec:
