--- a/infrastructure/kube/keep-test/monitoring/prometheus/prometheus-service.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus/prometheus-service.yaml
@@ -3,10 +3,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: monitoring
   annotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: '9090'
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9090"
 spec:
   selector:
     app: prometheus
