Add TODO to ingress config

--- a/infrastructure/kube/keep-test/monitoring/monitoring-ingress.yaml
+++ b/infrastructure/kube/keep-test/monitoring/monitoring-ingress.yaml
@@ -1,3 +1,5 @@
+# TODO: Revisit this file while working on exposing data publicly and setting up TLS.
+# TODO: Describe in the README.adoc
 ---
 ## Nginx Ingress
 ## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/
