Define Ingress controller for Grafana
The Ingress controller was configured according to the Google Cloud
documentation: https://cloud.google.com/kubernetes-engine/docs/concepts/ingress

Following steps were executed:
1. Static IP for monitoring was created with:
`gcloud compute addresses create keep-test-monitoring-ingress --global`

2. Created a DNS entry to point to the static IP:
https://cloud.google.com/dns/docs/set-up-dns-records-domain-name#create_a_record_to_point_the_domain_to_an_external_ip_address

3. Deployed the Ingress configurtaion:
kubectl apply -f monitoring-ingress.yaml

--- a/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
@@ -16,6 +16,13 @@ spec:
       containers:
         - name: grafana
           image: grafana/grafana:9.1.7
+          env:
+            - name: GF_SERVER_DOMAIN
+              value: monitoring.test.keep.network
+            - name: GF_SERVER_ROOT_URL
+              value: "%(protocol)s://%(domain)s:%(http_port)s/grafana/"
+            - name: GF_SERVER_SERVE_FROM_SUB_PATH
+              value: "true"
           ports:
             - name: grafana
               containerPort: 3000
