Add Trickster as cache for Prometheus
Trickster works as a cahce for request that are proxied to Prometheus.
We use it to optimize querying.

See: https://github.com/trickstercache/trickster

--- a/infrastructure/kube/keep-test/monitoring/grafana/config/datasources.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/config/datasources.yaml
@@ -1,9 +1,18 @@
 apiVersion: 1
 datasources:
-  - name: prometheus
+  - name: Trickster
     type: prometheus
     access: proxy
     editable: true
     orgId: 1
-    url: http://prometheus.monitoring.svc.cluster.local:9090
+    url: http://trickster:8480
+    version: 1
+    isDefault: true
+
+  - name: Prometheus
+    type: prometheus
+    access: proxy
+    editable: true
+    orgId: 1
+    url: http://prometheus:9090
     version: 1
