--- a/infrastructure/kube/keep-test/monitoring/grafana/config/dashboards.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/config/dashboards.yaml
@@ -3,8 +3,8 @@ providers:
   - name: dashboards-provider
     type: file
     disableDeletion: true
-    editable: false
     updateIntervalSeconds: 10
     allowUiUpdates: false
     options:
       path: "/var/lib/grafana/dashboards"
+      foldersFromFilesStructure: true
