--- a/infrastructure/kube/keep-test/monitoring/grafana/kustomization.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/kustomization.yaml
@@ -15,10 +15,13 @@ configMapGenerator:
       - config/grafana.ini
       - config/dashboards.yaml
       - config/datasources.yaml
-  - name: grafana-dashboards
+  - name: grafana-dashboards-keep
     files:
-      - dashboards/keep-network-nodes-dashboard.json
-      - dashboards/prometheus.json
+      - dashboards/keep/keep-network-nodes-public.json
+      - dashboards/keep/keep-network-nodes.json
+  - name: grafana-dashboards-infrastructure
+    files:
+      - dashboards/infrastructure/kubernetes-deployments.json
 
 generatorOptions:
   disableNameSuffixHash: true
