Configure consistent resources limits and targets
Configures values in consistent way. See https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-units-in-kubernetes

--- a/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
@@ -48,11 +48,11 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              memory: "1Gi"
-              cpu: "1000m"
+              cpu: 1000m
+              memory: 1Gi
             requests:
-              memory: 500M
-              cpu: "500m"
+              cpu: 250m
+              memory: 512Mi
           volumeMounts:
             - name: grafana-grafana-ini
               mountPath: /etc/grafana/grafana.ini
