--- a/infrastructure/kube/keep-test/monitoring/prometheus/prometheus-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus/prometheus-deployment.yaml
@@ -43,11 +43,11 @@ spec:
             timeoutSeconds: 2
           resources:
             limits:
-              cpu: "1"
+              cpu: 1000m
               memory: 1Gi
             requests:
               cpu: 500m
-              memory: 500M
+              memory: 512Mi
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /etc/prometheus/
@@ -66,11 +66,11 @@ spec:
             - --scan.allowPrivateAddresses
           resources:
             limits:
-              cpu: "1"
+              cpu: 1000m
               memory: 1Gi
             requests:
-              cpu: 500m
-              memory: 500M
+              cpu: 250m
+              memory: 256Mi
           volumeMounts:
             - name: prometheus-sd-volume
               mountPath: /etc/prometheus/sd/
