--- a/infrastructure/kube/keep-test/monitoring/trickster/trickster-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/trickster/trickster-deployment.yaml
@@ -21,7 +21,7 @@ spec:
               containerPort: 8481
           resources:
             limits:
-              cpu: "1"
+              cpu: 1000m
               memory: 1Gi
             requests:
               cpu: 500m
