--- a/infrastructure/kube/keep-test/monitoring/prometheus/config/config.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus/config/config.yaml
@@ -1,7 +1,7 @@
 global:
-  scrape_interval: 5s
-  scrape_timeout: 5s
-  evaluation_interval: 5s
+  scrape_interval: 1m
+  scrape_timeout: 10s
+  evaluation_interval: 1m
 alerting:
   alertmanagers:
     - follow_redirects: true
@@ -17,8 +17,6 @@ rule_files:
 scrape_configs:
   - job_name: keep-discovered-nodes
     honor_timestamps: true
-    scrape_interval: 5s
-    scrape_timeout: 5s
     metrics_path: /metrics
     scheme: http
     follow_redirects: true
@@ -42,8 +40,6 @@ scrape_configs:
         refresh_interval: 5m
   - job_name: keep-external-nodes
     honor_timestamps: true
-    scrape_interval: 5s
-    scrape_timeout: 5s
     metrics_path: /metrics
     scheme: http
     follow_redirects: true
@@ -54,8 +50,6 @@ scrape_configs:
         refresh_interval: 5m
   - job_name: keep-internal-nodes
     honor_timestamps: true
-    scrape_interval: 5s
-    scrape_timeout: 5s
     metrics_path: /metrics
     scheme: http
     follow_redirects: true
@@ -80,8 +74,6 @@ scrape_configs:
             label: app=keep
   - job_name: grafana
     honor_timestamps: true
-    scrape_interval: 5s
-    scrape_timeout: 5s
     metrics_path: /metrics
     scheme: http
     follow_redirects: true
@@ -121,8 +113,6 @@ scrape_configs:
         enable_http2: true
   - job_name: prometheus
     honor_timestamps: true
-    scrape_interval: 5s
-    scrape_timeout: 5s
     metrics_path: /metrics
     scheme: http
     follow_redirects: true
