--- a/infrastructure/kube/keep-test/monitoring/prometheus/config/config.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus/config/config.yaml
@@ -2,16 +2,17 @@ global:
   scrape_interval: 1m
   scrape_timeout: 10s
   evaluation_interval: 1m
-alerting:
-  alertmanagers:
-    - follow_redirects: true
-      enable_http2: true
-      scheme: http
-      timeout: 10s
-      api_version: v2
-      static_configs:
-        - targets:
-            - alertmanager.monitoring.svc:9093
+# TODO: Configure Alert Manager
+# alerting:
+#   alertmanagers:
+#     - follow_redirects: true
+#       enable_http2: true
+#       scheme: http
+#       timeout: 10s
+#       api_version: v2
+#       static_configs:
+#         - targets:
+#             - alertmanager.monitoring.svc:9093
 rule_files:
   - /etc/prometheus/rules.yaml
 scrape_configs:
