--- a/infrastructure/kube/keep-test/monitoring/prometheus/config/rules.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus/config/rules.yaml
@@ -1,10 +1,3 @@
 groups:
-  - name: demo alert
-    rules:
-      - alert: High Pod Memory
-        expr: sum(container_memory_usage_bytes) > 1
-        for: 1m
-        labels:
-          severity: slack
-        annotations:
-          summary: High Memory Usage
+  # TODO: Define some common rules to record: https://prometheus.io/docs/prometheus/latest/configuration/recording_rules/
+  # TODO: Define some alerts: https://prometheus.io/docs/prometheus/latest/configuration/alerting_rules/
