--- a/infrastructure/kube/keep-test/monitoring/grafana/config/dashboards.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/config/dashboards.yaml
@@ -4,7 +4,7 @@ providers:
     type: file
     disableDeletion: true
     updateIntervalSeconds: 10
-    allowUiUpdates: false
+    allowUiUpdates: true
     options:
       path: "/var/lib/grafana/dashboards"
       foldersFromFilesStructure: true
