Configure Google OAuth2 for Grafana
Here we integrate Grafana with Google OAuth2

See: https://grafana.com/docs/grafana/latest/setup-grafana/configure-security/configure-authentication/google/

Additionally a secret was created with kustomization:
secretGenerator:
- name: grafana-auth-google
  literals:
  - client_id=ABC
  - client_secret=XYZ

--- a/infrastructure/kube/keep-test/monitoring/grafana/config/grafana.ini
+++ b/infrastructure/kube/keep-test/monitoring/grafana/config/grafana.ini
@@ -1,2 +1,9 @@
+[auth.google]
+enabled = true
+scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
+auth_url = https://accounts.google.com/o/oauth2/auth
+token_url = https://accounts.google.com/o/oauth2/token
+allow_sign_up = true
+
 [feature_toggles]
 publicDashboards = true
