--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -253,5 +253,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Staticcheck
         uses: dominikh/staticcheck-action@v1.2.0
-
-
+        with:
+          version: "2022.1.3"
